Build sentence dict.

--- a/notebooks/02-corpus.ipynb
+++ b/notebooks/02-corpus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,8 @@
     "\n",
     "from cached_property import cached_property\n",
     "from glob import glob\n",
-    "from torchtext.vocab import Vectors"
+    "from torchtext.vocab import Vectors\n",
+    "from tqdm import tqdm_notebook"
    ]
   },
   {
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +109,7 @@
     "        return glob(os.path.join(self.root, '**/*.txt'), recursive=True)\n",
     "    \n",
     "    def segments(self):\n",
-    "        for path in self.paths():\n",
+    "        for path in tqdm_notebook(self.paths()):\n",
     "            yield Segment(path)\n",
     "            \n",
     "    def sentences(self):\n",
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,114 +128,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 174,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b59e3d54f9b64544ac47d3f503624b6b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HBox</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=7437), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "sents = c.sentences()"
+    "sents = {\n",
+    "    i: sent\n",
+    "    for i, sent in enumerate(c.sentences())\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seg = next(c.segments())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.16079751e-01,  7.67797520e-02,  1.58425460e-02,  9.04020471e-03,\n",
-       "        1.88838151e-01,  1.61405149e-02, -6.11104304e-02,  2.02422897e-01,\n",
-       "        6.94794003e-02,  2.17762578e+00,  2.60233564e-02, -3.99143423e-02,\n",
-       "        9.87007338e-02, -1.24269025e-04, -7.27600504e-02, -1.31157401e-01,\n",
-       "       -1.05119752e-01,  8.20595861e-01, -6.12178512e-02, -1.10416892e-02,\n",
-       "       -3.85753071e-02,  7.89622011e-02, -4.14466657e-02,  5.20343993e-02,\n",
-       "        4.64679023e-02, -1.03831300e-01, -1.68361682e-01,  3.77670506e-02,\n",
-       "        1.74237892e-02, -1.21406998e-02,  1.46070765e-01,  3.04711652e-01,\n",
-       "       -4.56274953e-03,  6.00779916e-03,  1.23606851e-01, -1.08725413e-01,\n",
-       "        9.71560003e-03, -2.03691004e-02,  3.89082047e-02, -9.23848990e-02,\n",
-       "        1.05770700e-01, -9.55240485e-02, -1.40809872e-02, -2.01666050e-01,\n",
-       "        5.04097565e-02, -2.95507797e-02, -1.92805402e-01, -4.16759603e-02,\n",
-       "       -1.34415001e-01,  8.08078210e-02, -3.37444960e-02,  4.11042401e-02,\n",
-       "       -5.18174527e-02,  1.11134881e-01,  4.61009801e-02, -2.82935379e-03,\n",
-       "       -1.22258980e-03,  6.90481151e-02,  6.88365335e-03,  7.96180051e-03,\n",
-       "        3.80885497e-02,  1.38154951e-01, -4.33854289e-02,  2.29531683e-01,\n",
-       "       -6.31832988e-02, -4.16235507e-02,  4.74355128e-03, -4.08422977e-02,\n",
-       "       -9.09415500e-02,  2.61727998e-01,  1.59510101e-02,  9.79919778e-03,\n",
-       "        1.56640186e-01,  1.54995445e-01, -1.79912101e-01, -5.97446984e-02,\n",
-       "        3.96434506e-02, -7.92574038e-02, -5.85916515e-02, -5.13971008e-02,\n",
-       "        1.01030287e-01,  5.44761716e-02, -3.73127015e-02,  6.17637255e-02,\n",
-       "       -2.15801455e-02, -2.14113396e-01, -3.61188096e-01, -9.13081003e-02,\n",
-       "        3.62169498e-02, -2.82923499e-02, -1.80808954e-01,  7.07274921e-02,\n",
-       "       -3.54838683e-03, -1.08615077e-01,  2.53422467e-02, -2.95446480e-02,\n",
-       "       -1.33865751e-01,  9.12576106e-02, -1.01988149e-01, -4.58407514e-02,\n",
-       "        3.96624348e-02,  7.54105731e-02, -1.01824102e-01, -1.02610350e-01,\n",
-       "       -4.83665501e-02, -2.68318509e-01,  2.72220911e-02,  7.02296014e-02,\n",
-       "        1.07342050e-01,  7.15876059e-02, -4.53418515e-02,  1.32501167e-02,\n",
-       "        7.27361156e-02,  5.21967451e-02, -3.31459002e-02, -5.10384251e-02,\n",
-       "       -1.73386351e-01,  8.57790536e-02, -1.20504783e-02, -1.24339999e-01,\n",
-       "       -9.22129992e-03,  2.80834893e-03, -1.13231698e-01, -1.91401633e-01,\n",
-       "       -1.47168748e-01, -5.21996342e-02, -2.98255053e-03, -1.14709799e-01,\n",
-       "        2.59778425e-03, -3.95207084e-02, -6.87086947e-02,  3.69096495e-02,\n",
-       "        6.20508493e-02, -2.86180060e-03,  4.62154742e-02, -5.20422999e-02,\n",
-       "        4.87470935e-02, -1.56118494e-02,  3.69518491e-02, -1.36484802e-01,\n",
-       "       -4.34508745e-01, -3.99057388e-02, -2.83504990e-02,  6.41996482e-02,\n",
-       "        4.82715506e-02,  1.58137982e-02, -1.34778492e-02, -1.33749401e-01,\n",
-       "        2.68591737e-01, -6.85874017e-02,  4.48095079e-02,  1.34637499e-01,\n",
-       "        6.86783523e-02,  4.22253530e-02, -3.91834053e-02, -1.66625048e-01,\n",
-       "       -4.47132997e-02,  8.84722020e-02, -1.05133375e-01,  1.19335471e-02,\n",
-       "       -3.19490639e-02,  3.56578941e-02, -4.05893493e-02,  2.20897978e-02,\n",
-       "        4.40915097e-03, -6.41014281e-02, -5.30140139e-03, -8.43462946e-02,\n",
-       "        2.25055080e-01,  9.55618980e-02,  5.72471505e-02,  1.16708994e-01,\n",
-       "       -1.00019523e-02, -1.63131009e-01, -2.89183611e-02, -9.99520496e-02,\n",
-       "        1.06595914e-01, -1.00439502e-02, -2.33153598e-02, -6.49051026e-02,\n",
-       "       -5.33791005e-02,  1.05836200e-01, -1.65555001e-01, -2.48202248e-01,\n",
-       "       -2.34704893e-02, -6.13028091e-02,  4.15199165e-02, -3.11150014e-02,\n",
-       "       -1.23910722e-02,  8.67274031e-02, -8.01724304e-03, -5.50409982e-02,\n",
-       "       -1.15990526e-01,  3.45233042e-02, -4.74984145e-02,  1.28401048e-02,\n",
-       "       -5.11970667e-03, -9.25301872e-02, -3.22908447e-01,  8.19502514e-02,\n",
-       "        6.87410031e-03, -3.86766512e-02, -1.08245150e-01,  1.07481105e-01,\n",
-       "        2.34066497e-01, -1.48881502e-02,  1.00456799e-01, -6.61872600e-02,\n",
-       "       -9.47907486e-02,  5.85244829e-03, -9.18654500e-02, -4.79794282e-02,\n",
-       "       -1.77482504e-02, -1.06115701e-01,  6.60485058e-02,  1.13787949e-01,\n",
-       "       -4.38250493e-02,  8.90818565e-02,  1.20898849e-01,  5.42535508e-02,\n",
-       "       -7.31485491e-02, -2.98034940e-02, -1.29594900e-01,  1.42434648e-01,\n",
-       "       -1.38887566e-03, -6.49883485e-02,  4.72637480e-02,  1.72446501e-02,\n",
-       "       -4.00106982e-02,  2.44021301e-01,  1.12983015e-01,  1.12429059e-02,\n",
-       "       -3.10006260e-02,  5.70544996e-02,  9.06941044e-02, -4.68437022e-02,\n",
-       "        1.08420650e-01, -5.87320003e-02, -2.96513630e-02,  1.16032520e-01,\n",
-       "        9.66424484e-02,  5.33797517e-02, -1.67723409e-02,  1.99478398e-01,\n",
-       "        1.06519578e-01, -1.05689106e-01, -6.66719692e-02,  1.12253015e-02,\n",
-       "        5.30253472e-02, -7.69713480e-02, -1.48480249e-01,  8.12836838e-03,\n",
-       "        1.45114362e-01,  6.77362030e-02,  6.68105997e-02,  1.37156899e-01,\n",
-       "        1.90399367e-01, -9.47554464e-03, -1.76225994e-02, -1.04789107e-01,\n",
-       "        1.47670202e-01, -2.06713023e-02,  5.03088608e-02,  8.17464646e-03,\n",
-       "        2.22723013e-02, -2.08464421e-01, -7.71323009e-02, -1.20425302e-01,\n",
-       "        1.54373653e-01, -9.38928893e-02,  8.69273963e-02, -1.36007001e-01,\n",
-       "        2.48575052e-03, -1.25011463e-01,  5.48783299e-02,  5.74448034e-02,\n",
-       "        1.05225251e-01, -8.25390003e-02,  1.04468099e-01,  5.72867739e-02,\n",
-       "        2.91698449e-01,  7.39089828e-03,  1.96235977e-02,  8.87872962e-02,\n",
-       "       -8.24811532e-02, -4.62316501e-02,  6.80519003e-02, -5.26558180e-02,\n",
-       "        8.02164119e-02, -7.60348187e-02, -1.50710730e-01,  1.97488520e-02,\n",
-       "        1.45142770e-01,  1.29774700e-02, -6.07888006e-02,  6.71470018e-02,\n",
-       "        6.31425529e-02,  4.82215487e-02,  1.74658479e-02,  7.90925488e-02])"
+       "785611"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(seg.sentences())[50].vector_dan()"
+    "len(sents)"
    ]
   },
   {
