--- a/notebooks/02-corpus.ipynb
+++ b/notebooks/02-corpus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +13,12 @@
     "\n",
     "import numpy as np\n",
     "\n",
+    "from annoy import AnnoyIndex\n",
     "from cached_property import cached_property\n",
     "from glob import glob\n",
     "from torchtext.vocab import Vectors\n",
-    "from tqdm import tqdm_notebook"
+    "from tqdm import tqdm_notebook\n",
+    "from itertools import islice"
    ]
   },
   {
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,12 +69,18 @@
     "        return [t.text for t in self.doc]\n",
     "    \n",
     "    def vector_dan(self):\n",
-    "        return np.mean([vectors[t].tolist() for t in self.tokens()], 0)"
+    "        \n",
+    "        embeds = [\n",
+    "            vectors[t].squeeze().tolist()\n",
+    "            for t in self.tokens()\n",
+    "        ]\n",
+    "        \n",
+    "        return np.mean(embeds, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,13 +136,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sents = {\n",
+    "    i: sent\n",
+    "    for i, sent in enumerate(islice(c.sentences(), 100000))\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b59e3d54f9b64544ac47d3f503624b6b",
+       "model_id": "eb605bc3ce57450a9c29dd6764b22040",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,7 +194,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=7437), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=100000), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -166,33 +206,64 @@
      "text": [
       "\n"
      ]
-    }
-   ],
-   "source": [
-    "sents = {\n",
-    "    i: sent\n",
-    "    for i, sent in enumerate(c.sentences())\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "785611"
+       "True"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(sents)"
+    "idx_dan = AnnoyIndex(300)\n",
+    "\n",
+    "for i, sent in tqdm_notebook(sents.items()):\n",
+    "    idx_dan.add_item(i, sent.vector_dan())\n",
+    "    \n",
+    "idx_dan.build(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I think there’s concern out there. \n",
+      "\n",
+      "I feel very good about where I’m at. \n",
+      "\n",
+      "I’m sure the neighbors up the road think I’m a lunatic. \n",
+      "\n",
+      "I just hate the idea of losing it.” \n",
+      "\n",
+      "I’m just not comfortable about something like this and saw no point to it. \n",
+      "\n",
+      "I count all the states I’m glad I’m not the governor of.” \n",
+      "\n",
+      "I’m so hurt, I guess I’m just look- ing for some input into this. \n",
+      "\n",
+      "And this election isn’t just about what we think about unions. \n",
+      "\n",
+      "I’m already on the bal- lot. \n",
+      "\n",
+      "I’m writing now because I have a problem. \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = Sentence(\"I'm worried about the economy.\")\n",
+    "\n",
+    "for ri in idx_dan.get_nns_by_vector(query.vector_dan(), 10):\n",
+    "    print(sents[ri].text, '\\n')"
    ]
   },
   {
