Get rid of sent2vec.

--- a/notebooks/05-index.ipynb
+++ b/notebooks/05-index.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,13 +732,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4802e52f2bc94d7b944ff0c2ad8ea59f",
+       "model_id": "7aa65d87439542bbb782e43ca08ae759",
        "version_major": 2,
        "version_minor": 0
       },
@@ -758,7 +758,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10000), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=785611), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -777,7 +777,7 @@
        "True"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
    "source": [
     "sent_idx = AnnoyIndex(1000)\n",
     "\n",
-    "id_text = list(sent_db['text'].head(10000).iteritems())\n",
+    "id_text = list(sent_db['text'].iteritems())\n",
     "\n",
     "for chunk in chunked_iter(tqdm_notebook(id_text), 1000):\n",
     "    \n",
