--- a/notebooks/05-index.ipynb
+++ b/notebooks/05-index.ipynb
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,43 +814,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is just so wonderful.” \n",
+      "We’re fine today, we’ll avoid recession, but what’s that going to do to us when the term is up?” \n",
       "\n",
-      "This is just so wonderful.” \n",
+      "We have a different style each year, but every year is every bit as exciting as the past,” said Mittnacht, who has worked for months to coordinate this weekend’s two-day festival that acts as the fundraiser for Wauke- sha’s Noon Rotary Club. \n",
       "\n",
-      "This is a great way to spend a cold winter evening. \n",
+      "We are, internal- ly, seeing things start to move in our direction in a very substantial way.” \n",
       "\n",
-      "This is one of the characteristics that make our country great. \n",
+      "We have to let the private sector grow and flourish and catch up, and then we need to grow together.” \n",
       "\n",
-      "This is a great opportunity for us today,’’ Walker said. ‘‘ \n",
+      "We’d still like to see that change. \n",
       "\n",
-      "This is great research-based information about how to be successful with whatev- er the topic is.” \n",
+      "We’d still like to see that change. \n",
       "\n",
-      "This is a wonder- ful opportunity. “ \n",
+      "We have to run the report and get it online, so it’s not instantaneous. “ \n",
       "\n",
-      "This is by far the most ambitious thing I’ve done in my career. \n",
+      "We have all the compo- nents to be one of the best states in the country when it comes to job growth and opportunity.” \n",
       "\n",
-      "This is a very good venue for local artists to show their work,” Lorber said. “ \n",
+      "We are a neutral division within the agency, not to be inﬂ uenced by the administration. \n",
       "\n",
-      "This is all because we’re in the process of negotiating the permanent rule,’’ she said. \n",
+      "We are here to support each other and make sure it doesn’t happen again.’’ \n",
       "\n"
      ]
     }
    ],
    "source": [
-    "query(\"This is wonderful.\")"
+    "query(\"We have to act now to stop climate change.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "True"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,6 +877,13 @@
    "source": [
     "sent_idx.save('../data/sent_idx.bin')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
