--- a/notebooks/06-index-yt-kathy.ipynb
+++ b/notebooks/06-index-yt-kathy.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
     "        return glob(os.path.join(self.root, '**/*.json'), recursive=True)\n",
     "    \n",
     "    def transcripts(self):\n",
-    "        for path in tqdm_notebook(self.paths()):\n",
+    "        for path in self.paths():\n",
     "            yield YoutubeTranscript.from_path(path)\n",
     "            \n",
     "    def df_rows(self):\n",
@@ -206,6 +206,68 @@
     "                    channel_title=transcript['channel_title'], \n",
     "                    title=transcript['title'], \n",
     "                    published_at=transcript.published_at,\n",
+    "                    text=text,\n",
+    "                )\n",
+    "                \n",
+    "    def df(self):\n",
+    "        return pd.DataFrame(list(self.df_rows()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@attr.s\n",
+    "class KathyTranscript:\n",
+    "    \n",
+    "    path = attr.ib()\n",
+    "    \n",
+    "    def lines(self):\n",
+    "        with open(self.path) as fh:\n",
+    "            for line in fh.read().splitlines():\n",
+    "                yield line\n",
+    "                \n",
+    "    def text(self):\n",
+    "        return ' '.join(self.lines())\n",
+    "        \n",
+    "    @cached_property\n",
+    "    def doc(self):\n",
+    "        return nlp(self.text(), disable=['tokenizer', 'parser', 'tagger', 'ner'])\n",
+    "    \n",
+    "    @cached_property\n",
+    "    def basename(self):\n",
+    "        return os.path.basename(self.path)\n",
+    "    \n",
+    "    def sentence_texts(self):\n",
+    "        for sent in self.doc.sents:\n",
+    "            yield sent.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@attr.s\n",
+    "class KathyCorpus:\n",
+    "    \n",
+    "    root = attr.ib()\n",
+    "    \n",
+    "    def paths(self):\n",
+    "        return glob(os.path.join(self.root, '**/*.txt'), recursive=True)\n",
+    "    \n",
+    "    def transcripts(self):\n",
+    "        for path in self.paths():\n",
+    "            yield KathyTranscript(path)\n",
+    "            \n",
+    "    def df_rows(self):\n",
+    "        for transcript in self.transcripts():\n",
+    "            for text in transcript.sentence_texts():\n",
+    "                yield dict(\n",
+    "                    basename=transcript.basename,\n",
     "                    text=text,\n",
     "                )\n",
     "                \n",
@@ -444,6 +506,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kathy_corpus = KathyCorpus('../data/kathy2012/transcripts2012/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kathy_df = kathy_corpus.df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a0893cdb30e4413b23228ccd4583e8a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HBox</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=3814), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "kathy_idx = build_index(kathy_df['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
    "outputs": [],
@@ -455,74 +581,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We have to be thoughtful about it.’’ \n",
+      "This is just so wonderful.” \n",
       "\n",
-      "We think the savings are real.’’ \n",
+      "This is just so wonderful.” \n",
       "\n",
-      "We keep it low-key and I'm surrounded by the unconditional love I craved as a child. \n",
+      "This is a great way to spend a cold winter evening. \n",
       "\n",
-      "And we’ve got smart guys that they want it, they almost need it. \n",
+      "This is one of the characteristics that make our country great. \n",
       "\n",
-      "We the people have lost control. \n",
+      "This is a great opportunity for us today,’’ Walker said. ‘‘ \n",
       "\n",
-      "We have so many lost souls in here. \n",
+      "This is great research-based information about how to be successful with whatev- er the topic is.” \n",
       "\n",
-      "We need to make sure that changes to our mining laws continue that tradition. \n",
+      "This is a wonder- ful opportunity. “ \n",
       "\n",
-      "We need to make sure that changes to our mining laws continue that tradition. \n",
+      "This is by far the most ambitious thing I’ve done in my career. \n",
       "\n",
-      "We need the people in the state to have jobs, to work,’’ he said. \n",
+      "This is a very good venue for local artists to show their work,” Lorber said. “ \n",
       "\n",
-      "We need that money to come up here. \n",
+      "This is all because we’re in the process of negotiating the permanent rule,’’ she said. \n",
       "\n"
      ]
     }
    ],
    "source": [
-    "query(news_df, news_idx, \"We have to act now to stop climate change.\")"
+    "query(news_df, news_idx, \"This is wonderful.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "it is the largest city the most important city in terms of elections and so it really is good to \n",
+      "that 's what I 've been fighting for but I apparently you know we found that this is threatening to \n",
       "\n",
-      "this are you waiting for friends you walk it in should we walk in yeah what grade you 're going \n",
+      "41 the year before that 43 last year we moved up to 24 this year we moved up to 20 \n",
       "\n",
-      "always has been with the states should it be I mean you know I know it always has been absolutely \n",
+      "wonderful wonderful job it made a really strong argument for sending her to the US Senate she will be an \n",
       "\n",
-      "this bill was cynically transformed from a memorial resolution to an endorsement of President Bush 's failed policies the Republicans \n",
+      "an active role in their kids education I 'm going to thank all the teachers who dedicate their incredible talents \n",
       "\n",
-      "to be open to they 're going to require college degrees to get those so we got to find a \n",
+      "that battle for Wisconsin 's middle class that has been what this has all been about since this journey began \n",
       "\n",
-      "important this election is to real life to President Barack Obama and select me to the United States Senate because \n",
+      "grateful for the supporters who circulated those nomination papers and made the submission possible all together we had a goal \n",
       "\n",
-      "this little piece out there at all by the way we 're talking about this before in terms of some \n",
+      "an active role in their kids education we want to thank all the teachers who dedicate their incredible talents inspiring \n",
       "\n",
-      "this is the building blocks begin here and not only to the staff but to all of us who are \n",
+      "of all we want to encourage every student in the state to excel the new school year is exciting and \n",
       "\n",
-      "the people listening to this speech tonight may not have voted for me but I want you to know that \n",
+      "the hustle and bustle and in light of the recent tragedy everyone will take the opportunity to cherish the family \n",
       "\n",
-      "back to the start of this incredible country today we remember their lives their spirit and their commitment but we \n",
+      "our other son Alex will soon start his senior year at wamu tosa east high school it 's hard to \n",
       "\n"
      ]
     }
    ],
    "source": [
-    "query(yt_df, yt_idx, \"This is terrible.\")"
+    "query(yt_df, yt_idx, \"This is wonderful.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's wonderful. \n",
+      "\n",
+      "That's wonderful. \n",
+      "\n",
+      "It's really great. \n",
+      "\n",
+      "This is Wisconsin. \n",
+      "\n",
+      "So great. \n",
+      "\n",
+      "This is very helpful. \n",
+      "\n",
+      "It's phenomenal. \n",
+      "\n",
+      "It's a good one. \n",
+      "\n",
+      "This has been such a great conversation. \n",
+      "\n",
+      "This has been... this welfare stuff has been getting out of control for years. \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "query(kathy_df, kathy_idx, \"This is wonderful.\")"
    ]
   },
   {
